# InventorLoader

./: .gitignore  Acis.py  Acis2Step.py  EmptyFile.py  Import_IPT.py  Init.py  InitGui.py  InventorViewProviders.py  InventorWorkbench.py  README.md  TODOs.md  colors.json  importer.py  importerApp.py  importerBRep.py  importerBrowser.py  importerClasses.py  importerConstants.py  importerDC.py  importerDXF.py  importerDesignView.py  importerDirectory.py  importerEeData.py  importerEeScene.py  importerF3D.py  importerFBAttribute.py  importerFreeCAD.py  importerGraphics.py  importerIL.py  importerNotebook.py  importerOle10Nateive.py  importerReader.py  importerResults.py  importerSAT.py  importerSegNode.py  importerSegment.py  importerSheetDC.py  importerSheetDL.py  importerSheetSM.py  importerTransformation.py  (+7 more)
Demo-Status/: Demo-Status-0.2.ipt  Demo-Status-0.3.ipt  Demo-Status-0.4.1.ipt  Demo-Status-0.4.2.ipt  Demo-Status-0.4.ipt  Demo-Status-0.6.ipt  Dice.sat
Demo-Status/Demo-Status-0.6_ipt/: 0016_sat.history  0237_sat.history
Demo_Status/: Demo-Status-0.1.ipt
Docu/: FileFormat.odt  Workflow.htm
Examples/: Tutorial-iPart.Step01.FCStd  Tutorial-iPart.Step02.FCStd  Tutorial-iPart.Step03.FCStd  Tutorial-iPart.Step04.FCStd
Resources/: InventorLoader.qrc  JMP.qrc
Resources/icons/: FxBoundaryPatch.xpm  FxStitch.xpm  Sketch2D.xpm  Sketch3D.xpm  Workbench.xpm
Resources/ui/: IPTprefs.ui  PrefsInventorLoader.ui  iPartParameters.ui  iPartVariants.ui
dxfgrabber/: __init__.py  acdsdata.py  blockssection.py  codepage.py  color.py  const.py  decode.py  defaultchunk.py  drawing.py  dxfentities.py  dxfobjects.py  entitysection.py  headersection.py  juliandate.py  layers.py  linetypes.py  sections.py  styles.py  tablessection.py  tags.py
