<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
<name>InventorLoader</name>
<version>1.5.1</version>
<date>2024-12-12</date>
<maintainer email="jens.m.plonka@gmail.com">jmplonka</maintainer>
<license>LGPL-3.0-or-later</license>
<description>This plugin enables FreeCAD to import Inventor part files (*.IPT), ACIS files (*.SAT, *.SAB), 3D-Solids from DXF files and Fusion360 (*.f3d) files.</description>
<icon>Icon.png</icon>
<url type="bugtracker">https://github.com/jmplonka/InventorLoader/issues</url>
<url type="repository" branch="master">https://github.com/jmplonka/InventorLoader</url>
<content>
	<workbench>
		<classname>InventorWorkbench</classname>
		<subdirectory>./</subdirectory>
	</workbench>
</content>
<tag>Autodesk</tag>
<tag>Inventor</tag>
<tag>IPT</tag>
<tag>ACIS</tag>
<tag>SAT</tag>
<tag>DXF</tag>
<tag>F3D</tag>
<tag>3D-Solids</tag>
<tag>Fusion360</tag>
<depend>Part</depend>
<depend>Draft</depend>
<depend>Sketcher</depend>
<depend>SheetMetal Workbench</depend>
<depend>olefile</depend>
<depend>xlrd</depend>
<depend>xlwt</depend>
<depend>ezdxf</depend>
</package>
